# chuk-mcp-maritime-archives

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  ROADMAP.md  SPEC.md  fly.toml  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
data/: cargo.json  carreira_voyages.json  carreira_wrecks.json  climate_analysis_results.json  dss_crews.json  dss_musters.json  eic_voyages.json  eic_wrecks.json  galleon_voyages.json  galleon_wrecks.json  gazetteer.json  hull_profiles.json  routes.json  soic_voyages.json  soic_wrecks.json  speed_profiles.json  vessels.json  wrecks.json
examples/: batavia_case_study_demo.py  capabilities_demo.py  cargo_trade_demo.py  climate_proxy_demo.py  crew_demographics_demo.py  crew_muster_demo.py  cross_archive_demo.py  dss_crew_demo.py  enso_detection_demo.py  enso_investigation_demo.py  entity_resolution_demo.py  geojson_export_demo.py  hull_profiles_demo.py  location_lookup_demo.py  narrative_search_demo.py  noaa_us_wrecks_demo.py  route_explorer_demo.py  speed_profile_demo.py  statistics_demo.py  timeline_demo.py  tool_runner.py  track_explorer_demo.py  ukho_global_wrecks_demo.py  vessel_search_demo.py  volcanic_signal_demo.py  voyage_search_demo.py  wind_analysis_demo.py  wreck_investigation_demo.py
scripts/: climate_analysis.py  download_all.py  download_cargo.py  download_cliwoc.py  download_crew.py  download_das.py  download_dss.py  download_eic.py  download_noaa.py  download_ukho.py  download_utils.py  generate_cargo.py  generate_carreira.py  generate_dss.py  generate_eic.py  generate_galleon.py  generate_noaa.py  generate_reference.py  generate_soic.py  generate_speed_profiles.py  generate_ukho.py  run_examples.sh  upload_reference_data.py
src/chuk_mcp_maritime_archives/: __init__.py  async_server.py  (+2 more)
tests/: conftest.py  test_archive_manager.py  test_artifact_integration.py  test_clients.py  test_entity_resolution.py  test_gazetteer.py  test_linking.py  test_models.py  test_new_archive_clients.py  test_responses.py  test_routes.py  test_server.py  test_speed_profiles.py  test_timeline.py  test_tools.py  test_tracks.py
(+81 files in other folders)
